[tool.poetry]
name = "payment-webhook"
version = "0.1.0"
description = ""
authors = ["clcosta <clcostaf@hotmail.com>"]
readme = "README.md"
packages = [{include = "payment_webhook"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask-SQLAlchemy = "^3.0.3"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
